--- a/gb/22/3/8/n13631595.md
+++ b/gb/22/3/8/n13631595.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yadmko3863/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yadmko3863/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yadmko3863/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yadmko3863/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【秦鹏直播】美国禁从俄进口能源 拟制裁中共</h2>
-<a href="https://d1z1i6xmekcnf1.cloudfront.net/L2tyVA3Db"><img width="600" src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d1eqe8yfgc9j6n.cloudfront.net/W8xyVA3De"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>美国禁从俄进口能源，习：制裁对各方不利；白宫国会拟制裁中共。（《秦鹏直播》提供）
 </h6>
 <hr>
 	<p>【大纪元2022年03月09日讯】各位观众朋友们大家好，今天是美东时间3月7日，京港台时间3月8日，我是秦鹏，欢迎收看“秦鹏政经观察”时事天天聊。</p>
-<p>今天焦点：拜登下令禁止从<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>进口石油、天然气；美国未使用的一件重磅利器；<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>与法德领导人通话，称“制裁对各方不利”；白宫和国会拟制裁<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>。</p>
-<p>美国总统拜登周二终于下令禁止从<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>进口原油、天然气和煤炭。美国有一件可以快速打败俄罗斯的超级利器，杀敌一千、自己获利八百，但为何迟迟没有投入使用？</p>
-<p>周二（3月8日），<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>在俄罗斯入侵乌克兰以来，首次和国际领导人通话，他呼吁各方和平，还称“制裁对各方不利”。与此同时，<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>外交部和党媒继续做着与和平完全相反的事情。目前，美国白宫和国会，均提出要制裁中共。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d1z1i6xmekcnf1.cloudfront.net/L2tyVA3Db"><img width="600" src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/oxBlBwl8LPE?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+<p>今天焦点：拜登下令禁止从<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>进口石油、天然气；美国未使用的一件重磅利器；<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>与法德领导人通话，称“制裁对各方不利”；白宫和国会拟制裁<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>。</p>
+<p>美国总统拜登周二终于下令禁止从<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>进口原油、天然气和煤炭。美国有一件可以快速打败俄罗斯的超级利器，杀敌一千、自己获利八百，但为何迟迟没有投入使用？</p>
+<p>周二（3月8日），<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>在俄罗斯入侵乌克兰以来，首次和国际领导人通话，他呼吁各方和平，还称“制裁对各方不利”。与此同时，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>外交部和党媒继续做着与和平完全相反的事情。目前，美国白宫和国会，均提出要制裁中共。</p>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d1eqe8yfgc9j6n.cloudfront.net/W8xyVA3De"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/oxBlBwl8LPE?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 	</div></center></center></p>
 <h2>乌克兰战事胶着 拜登使出最厉害的一招？</h2>
 <p>乌克兰战争已经持续了近两个星期，不仅造成了严重的人员伤亡和财产损失，而且带来了二战以来欧洲最为严重的难民危机。根据联合国的统计，目前逃离乌克兰的难民人数已经超过200万人。6,000多在乌华人中，至今也还有很多人困在交战地区。</p>
@@ -25,8 +25,8 @@
 <p>可以看出，乌克兰人的意志还是蛮坚强的。但与此同时，各界都希望欧美能够对俄罗斯实施更加严厉的经济制裁，其关键是打击俄罗斯的经济命脉——能源产业，以断绝俄军事机器的运转。</p>
 <h3>美禁止进口俄罗斯原油</h3>
 <p>今天，这一幕终于拉开了。3月8日上午，美国总统拜登在白宫宣布，禁止进口俄罗斯原油和天然气，以强化对俄罗斯经济的杀伤力。</p>
-<p>拜登说：“这意味着美国港口将不再接受<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF%E7%9F%B3%E6%B2%B9.md#1">俄罗斯石油</a>，美国人民将对普京的战争机器造成又一次强有力的打击。”</p>
-<p>在拜登发表讲话前不久，英国宣布将在2022年底前，逐步停止进口<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF%E7%9F%B3%E6%B2%B9.md#1">俄罗斯石油</a>和石油产品。</p>
+<p>拜登说：“这意味着美国港口将不再接受<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF%E7%9F%B3%E6%B2%B9.md#1">俄罗斯石油</a>，美国人民将对普京的战争机器造成又一次强有力的打击。”</p>
+<p>在拜登发表讲话前不久，英国宣布将在2022年底前，逐步停止进口<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF%E7%9F%B3%E6%B2%B9.md#1">俄罗斯石油</a>和石油产品。</p>
 <p>我看到美国之音在报导这个消息的时候，题目用了这样的一个词，说“最厉害的一击终于出台”，是不是这样呢？我的答案：不是。但是美国实际上有一个更强大的武器还没有出手。</p>
 <p>为什么说美国和英国停止进口俄罗斯石油，这还不是一个最厉害的招数呢？</p>
 <p>第一个原因，是美国进口量有限，不会对俄罗斯造成沉重打击。美国每年进口的俄罗斯石油数量有多少呢？大约60万桶。而俄罗斯是世界上最大的石油生产国之一，每天出口大约750万桶原油。其中，大部分是卖给了欧洲。</p>
@@ -80,50 +80,50 @@
 <p>无独有偶，美国重量级参议员卢比奥，在昨天也提出类似了对中共的制裁措施，并且要把它变成美国的法案。</p>
 <p>卢比奥在推特上说：“我正在制定立法，可能会对中共实施制裁，如果我们发现他们试图使用他们的跨境国际支付系统（CIPS）帮助俄罗斯绕过SWIFT制裁的话。”</p>
 <p>就是说，虽然在俄罗斯侵略乌克兰进展不顺利，以及遭到世界最严厉制裁之后，中共现在降低了调门，不敢再讲狠话了，包括在今年两会也没有再恶狠狠地提台湾问题，但是，中共出卖乌克兰、支持俄罗斯入侵的做法是不会改变的，它也一定会继续传播各种仇恨美国和西方的假信息，同时在中国国内加强对反战要和平民众的言论压制。</p>
-<p>订阅YouTube：<ahref=""></a><a href="https://d1z1i6xmekcnf1.cloudfront.net/L2tyVA3Db"><img width="600" src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg">"></a><a href="https://d1z1i6xmekcnf1.cloudfront.net/L2tyVA3Db"><img width="600" src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg</a><br />
-订阅 Youmaker 优美客频道：<ahref=""></a><a href="https://d1z1i6xmekcnf1.cloudfront.net/L2tyVA3Db"><img width="600" src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/QingPeng">"></a><a href="https://d1z1i6xmekcnf1.cloudfront.net/L2tyVA3Db"><img width="600" src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/QingPeng</a></p>
-<p>《<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
+<p>订阅YouTube：<ahref=""></a><a href="https://d1eqe8yfgc9j6n.cloudfront.net/W8xyVA3De"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg">"></a><a href="https://d1eqe8yfgc9j6n.cloudfront.net/W8xyVA3De"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg</a><br />
+订阅 Youmaker 优美客频道：<ahref=""></a><a href="https://d1eqe8yfgc9j6n.cloudfront.net/W8xyVA3De"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/QingPeng">"></a><a href="https://d1eqe8yfgc9j6n.cloudfront.net/W8xyVA3De"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/QingPeng</a></p>
+<p>《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/2/n13617338.md#1">【秦鹏直播】俄乌战事未平 俄战机进入瑞典日本</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/3/n13620333.md#1">【秦鹏直播】中共否认求俄冬奥后开战 难掩尴尬</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/4/n13622963.md#1">【秦鹏直播】邓飞实名举报 质疑铁链女婚姻非法</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/7/n13629286.md#1">【秦鹏直播】乌克兰纳粹化？俄遭德大使馆打脸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/2/n13617338.md#1">【秦鹏直播】俄乌战事未平 俄战机进入瑞典日本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/3/n13620333.md#1">【秦鹏直播】中共否认求俄冬奥后开战 难掩尴尬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/4/n13622963.md#1">【秦鹏直播】邓飞实名举报 质疑铁链女婚姻非法</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/7/n13629286.md#1">【秦鹏直播】乌克兰纳粹化？俄遭德大使馆打脸</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/29/n10438143.md#1" target="_blank">刘晓：共产党“告密者001号”的结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10706291.md#1" target="_blank">波兰中欧经济论坛 政要签名支持控告江泽民</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10835295.md#1" target="_blank">中华传统文化之叹——消逝的城墙（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242901.md#1" target="_blank">组图：各国政要祝贺5.13世界法轮大法日</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/26/n13607219.md#1">最是美丽的季节  错过了惊蛰将错过什么呢？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629649.md#1">战地记者Michael Yon：俄乌战争带来全球灾难</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629480.md#1">【神韵作品】飞天古典舞身韵身法基础训练组合 &#8211; 中级</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629157.md#1">【军事热点】美国促波兰向乌克兰转让战斗机</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/1/n13612944.md#1">专家点评：七类对心脏健康最不好的食物</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626434.md#1">一位医生分享：常吃五种食物 大大增强免疫</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/2/n13616600.md#1">俄乌战 习近平对普京误判 北京恐陷入风险</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629675.md#1">大S徐熙媛与“酷龙”具俊晔续前缘 宣布结婚</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629121.md#1">声援铁链女 中国导演胡雪杨发布同类题材新片</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626449.md#1">瑞莎曝乌克兰惨况 发文感谢台湾援助家乡</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/5/n13624381.md#1">茄子可防动脉硬化 烹煮3个技巧避免变色</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/4/n13622027.md#1">西兰花让动脉变柔软！六大蔬菜保护心脏</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13625094.md#1">当季水果鲜甜营养 吃对了就不容易生病</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/26/n13606897.md#1">雨天鞋子湿掉怎么办？4方法可速干、不发臭</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626183.md#1">生活中霉菌别小觑 可增加疾病风险 如何去除</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/8/n13631595.htm">【秦鹏直播】美国禁从俄进口能源 拟制裁中共</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/8/n13631595.htm">【秦鹏直播】美国禁从俄进口能源 拟制裁中共</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13631595.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yadmko3863/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yadmko3863/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yadmko3863/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/3/8/n13631595.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
